--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Maps Example</string>
+    <string name="mapAPI">AIzaSyBI5U_3mMGjsesM6nbatTk0EpwRfYeUDiM</string>
 </resources>
